# mprpc

./: CMakeLists.txt  README.md  resolve_conflicts.sh
example/: CMakeLists.txt  friend.pb.cc  friend.pb.h  user.pb.cc  user.pb.h
src/: CMakeLists.txt  mprpcchannel.cc  rpcheader.pb.cc  rpcprovider.cc
src/include/: mprpcapplication.h
